--- a/plonetheme/onegovbear/theme/scss/tables.scss
+++ b/plonetheme/onegovbear/theme/scss/tables.scss
@@ -5,6 +5,16 @@ $table-odd-bg-color: darken($content-bg-color, 2%);
 $table-drag-bg-color: change-color($primary-color, $lightness: 93%);
 $table-drag-border-color: change-color($primary-color, $lightness: 85%);
 
+@include declare-variables(
+  table-heading-bg-color,
+  table-border-color,
+  table-seperator-border-color,
+  table-odd-bg-color,
+  table-drag-bg-color,
+  table-drag-border-color);
+
+
+
 table.listing {
   border: 1px solid $table-border-color;
   border-collapse: separate;
