--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -1,9 +1,7 @@
 $page-wrapper-width: 1200px;
 
-@if function-exists(register-theming-variables) {
-  ?: register-theming-variables(width,
-                                page-wrapper-width);
-}
+@include declare-variables(
+  page-wrapper-width);
 
 
 
@@ -16,7 +14,7 @@ body {
 }
 
 #container {
-    width: 100%;
+  width: 100%;
 }
 
 #page-wrapper {
@@ -32,6 +30,6 @@ body {
 }
 
 #bottom-actions {
-    width: $page-wrapper-width;
-    margin: 0 auto;
+  width: $page-wrapper-width;
+  margin: 0 auto;
 }
