--- a/plonetheme/onegovbear/theme/scss/form.scss
+++ b/plonetheme/onegovbear/theme/scss/form.scss
@@ -1,7 +1,7 @@
 $formtabs-border-color: #ccc;
 $input-bg-color: #fafafa;
 $input-border-color: darken($input-bg-color, 20%);
-$input-focus-color: change-color($primary-color, $lightness: 70%);
+$input-focus-color: $outline-color;
 $input-required-color: change-color($danger-color, $saturation: 90%);
 $input-error-bg-color: transparentize($danger-color, 85%);
 $input-error-border-color: transparentize($danger-color, 50%);
@@ -31,7 +31,6 @@ $input-error-border-color: transparentize($danger-color, 50%);
   @include boxshadow(0 1px 1px darken($input-bg-color, 5%) inset);
 
   &:focus {
-    @include no_focus();
     border: 1px solid $input-focus-color;
     @include boxshadow(0 1px 1px transparentize($input-focus-color, 0.8) inset,
                        0 0 5px transparentize($input-focus-color, 0.6));
