--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -1,4 +1,4 @@
-$text-color-light: desaturate(lighten($text-color, 25%), 100%);
+$text-color-light: desaturate(lighten($text-color, 25%), 100%) !default;
 
 @include declare-variables(
   text-color-light);
