--- a/plonetheme/onegovbear/theme/scss/portlet-calendar.scss
+++ b/plonetheme/onegovbear/theme/scss/portlet-calendar.scss
@@ -1,4 +1,4 @@
-$calendar-portlet-bg-color: $portlet-column-bg-color;
+$calendar-portlet-bg-color: $portlet-column-bg-color !default;
 
 @include declare-variables(
   calendar-portlet-bg-color);
