--- a/plonetheme/onegovbear/theme/scss/portlets.scss
+++ b/plonetheme/onegovbear/theme/scss/portlets.scss
@@ -1,4 +1,4 @@
-$portlet-column-bg-color: $gray-lighter;
+$portlet-column-bg-color: $gray-lighter !default;
 
 @include declare-variables(
   portlet-column-bg-color);
