--- a/plonetheme/onegovbear/theme/scss/menues.scss
+++ b/plonetheme/onegovbear/theme/scss/menues.scss
@@ -1,9 +1,9 @@
-$menu-bg-color: #fff;
-$menu-link-color: $gray-darker;
-$menu-bg-color-hover: darken($menu-bg-color, 5%);
-$menu-link-color-hover: darken($menu-link-color, 5%);
-$menu-border-color: darken($menu-bg-color, 20%);
-$menu-border-radius: 5px;
+$menu-bg-color: #fff !default;
+$menu-link-color: $gray-darker !default;
+$menu-bg-color-hover: darken($menu-bg-color, 5%) !default;
+$menu-link-color-hover: darken($menu-link-color, 5%) !default;
+$menu-border-color: darken($menu-bg-color, 20%) !default;
+$menu-border-radius: 5px !default;
 
 @include declare-variables(
   menu-bg-color,
