content: use ftw.theming variables.

--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -31,8 +31,8 @@ h6 {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 1.5em 0 1em 0;
-  font-family: $heading-font-family;
-  line-height: $heading-line-height;
+  font-family: $font-family-base;
+  line-height: $line-height-base;
   &.documentFirstHeading {
     margin: 0;
   }
