--- a/plonetheme/onegovbear/theme/scss/base.scss
+++ b/plonetheme/onegovbear/theme/scss/base.scss
@@ -1,25 +1,7 @@
-
-/* @group header */
-
-#header {
-  position: relative;
-  z-index: 3;
-}
-.logoRow {
-  min-height: 6em;
-}
-
 #portal-logo {
+  display: inline-block;
   margin: 1.5em 0;
-  height: $logo-height;
-  display: block;
-  float: left;
-  img {
-    max-height: 100%;
-  }
 }
-
-/* @end */
 
 /* @group document actions */
 
