style document actions.

--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -35,6 +35,18 @@ body {
 }
 
 
+#document-actions {
+  float: right;
+  width: auto;
+  >ul {
+    @include ul(inline);
+  }
+  li:not(:last-child):after {
+    content: ' | ';
+  }
+}
+
+
 #content {
   clear: both;
 }
