update searchbox layout.

--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -22,7 +22,7 @@ body {
 #page-wrapper {
   position: relative;
   background-color: $content-bg-color;
-  width: $page-wrapper-width;
+  max-width: $page-wrapper-width;
   margin: 0 auto;
 }
 
