disable outline more spicifically, not in general.

--- a/plonetheme/onegovbear/theme/scss/form.scss
+++ b/plonetheme/onegovbear/theme/scss/form.scss
@@ -24,6 +24,7 @@ $input-error-border-color: transparentize($danger-color, 50%) !default;
   line-height: 1em;
   padding: 0.5em;
   width: 20em;
+  outline: none;
 
   border: 1px solid $input-border-color;
   @include borderradius();
