move collapsible styling.

--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -100,3 +100,15 @@ fieldset {
   list-style: none;
   margin-left: 0;
 }
+
+dl.collapsible {
+  dt {
+    cursor: pointer;
+  }
+  dd {
+    display: none;
+  }
+  &.expandedBlockCollapsible dd {
+    display: block;
+  }
+}
