move byline styling to content.

--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -112,3 +112,17 @@ dl.collapsible {
     display: block;
   }
 }
+
+.documentByLine {
+  color: $light-text-color;
+  margin-bottom: 1em;
+}
+
+#category.documentByLine {
+  .separator {
+    display: none;
+  }
+  a {
+    @include label($primary-color);
+  }
+}
