move below-content viewlet styling.

--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -118,6 +118,10 @@ dl.collapsible {
   margin-bottom: 1em;
 }
 
+#viewlet-below-content {
+  margin-top: 2em;
+}
+
 #category.documentByLine {
   .separator {
     display: none;
