style button tag.

--- a/plonetheme/onegovbear/theme/scss/buttons.scss
+++ b/plonetheme/onegovbear/theme/scss/buttons.scss
@@ -65,6 +65,7 @@ $button-text-dark-color: black !default;
 input[type="button"],
 input[type="submit"],
 input[type="reset"],
+button,
 a.button,
 a.button.standalone,
 input.standalone {
