overlays: fix closing button when additional information is present.
e.g. related items popup includes an additional close text.
We just hide those elements so that the X is positioned correctly.

--- a/plonetheme/onegovbear/theme/scss/overlays.scss
+++ b/plonetheme/onegovbear/theme/scss/overlays.scss
@@ -40,6 +40,10 @@ $overlay-close-mask-color: transparentize($gray-light, 20%) !default;
     height: $overlay-close-width;
     width: $overlay-close-width;
 
+    >span {
+      display: none;
+    }
+
     &:before {
       position: absolute;
       content: '';
