personaltools: fix authorized drop-down menu by making anonymous linklist explicit.

--- a/plonetheme/onegovbear/theme/scss/actions.scss
+++ b/plonetheme/onegovbear/theme/scss/actions.scss
@@ -13,7 +13,7 @@
   }
 
   /* Anonymous: list actions by floating */
-  ul {
+  > ul {
     @include ul(inline);
     li {
       @include linklist;
